# Parallel-File-Hasher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ThreadPool.h
src/: ThreadPool.cpp  main.cpp
